--- a/Viva_vegan.csproj
+++ b/Viva_vegan.csproj
@@ -196,6 +196,7 @@
     <Content Include="FormDashboard\.README.txt" />
     <Content Include="MetroFramework.txt" />
     <Content Include=".README.txt" />
+    <None Include="Resources\an1.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
